--- a/views/cep/showAddress.handlebars
+++ b/views/cep/showAddress.handlebars
@@ -1,8 +1,17 @@
 <h1>Endereço buscado</h1>
-    <p> 
-        {{info.bairro}}
-        {{info.localidade}}
-        {{info.uf}}
-        {{info.logradouro}}
-        {{info.ddd}}
-     </p>
+    {{#if vazio}}
+        <h3>Não encontrado</h3>
+        <a href="/">Voltar</a>  
+    {{else}}
+        <p> 
+            {{info.bairro}}
+            {{info.localidade}}
+            {{info.uf}}
+            {{info.logradouro}}
+            {{info.ddd}}
+        </p>
+    {{/if}}
+    
+      
+    
+    
