comeco da criacao do modulo de buscar CEP

--- a/views/cep/find.handlebars
+++ b/views/cep/find.handlebars
@@ -5,5 +5,5 @@
         <label for="cep">CEP:</label>
         <input type="text" name="cep" placeholder="Digite o CEP" maxlength="8">
     </div>
-    <input type="submit" value="Pesquisar">
+    <input type="submit" value="Buscar">
 </form>
