--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,6 +7,13 @@
     <title>Encontrar Endereço</title>
 </head>
 <body>
+    <nav id="navbar"> 
+        <ul>
+             <li> <a href="/">Home</a> </li>
+            <li> <a href="/findCep">Procurar CEP</a> </li>
+        </ul>
+    </nav>
+
     <div class="container">
         {{{ body }}}
     </div>
