--- a/views/cep/showAddress.handlebars
+++ b/views/cep/showAddress.handlebars
@@ -1,14 +1,14 @@
-<h1>Endereço buscado</h1>
+<h1>Endereço</h1>
     {{#if vazio}}
         <h3>Não encontrado</h3>
         <a href="/">Voltar</a>  
     {{else}}
         <p> 
-            {{info.bairro}}
-            {{info.localidade}}
-            {{info.uf}}
-            {{info.logradouro}}
-            {{info.ddd}}
+            {{data.bairro}}
+            {{data.localidade}}
+            {{data.uf}}
+            {{data.logradouro}}
+            {{data.ddd}}
         </p>
     {{/if}}
     
