--- a/views/cep/findCep.handlebars
+++ b/views/cep/findCep.handlebars
@@ -9,7 +9,7 @@
     
     <div class="form-control">
         <label for="cidade">Cidade:</label>
-        <input type="text" name="cidade" placeholder="Digite a cidade" minlength="3">
+        <input type="text" name="cidade" placeholder="Digite a Cidade" minlength="3">
     </div>
 
     <div class="form-control">
