--- a/views/cep/find.handlebars
+++ b/views/cep/find.handlebars
@@ -1,9 +1,10 @@
 <h1>Encontrar Endereço por CEP</h1>
 
-<form action="/cep/findAddress" method="post">
-    <div class="form-control">
-        <label for="cep">CEP:</label>
-        <input type="text" name="cep" placeholder="Digite o CEP" maxlength="8">
-    </div>
-    <input type="submit" value="Buscar">
-</form>
+<div id="form-total">
+    <form action="/cep/findAddress" method="post">
+        <div class="form-control">
+            <input type="text" name="cep" placeholder="Digite o CEP" maxlength="8">
+        </div>
+        <input type="submit" value="Buscar" class="btn">
+    </form>
+</div>
